manifests/namespace-c.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: namespace-c
  labels:
    name: namespace-c
